# LBG-GDM

./: .env  Dockerfile  Guideliens  Makefile  bq_gdm_base.py  camscode.py  config.yaml  env.sh  frontend.yaml  pyproject.toml  samplex_extract.json  sessions.db
CobraSchedulerFinanceCards/: C01J01 - UPDATE CC_COBRA.CC_COBRA_LOAD_START_DT.sql  C01J02 - CC_AGREEMENT_ADDED_DATE.sql  C01J03 - TRNSCN_DERVTN_GROUPS.sql  C01J04 - CC_EVENTS_TO_EXCLUDE.sql  C01J05 - CC_FASTER_PAY_TRANSACTION.sql  C01J06 - BACS BT OUTS.sql  C01J07 - CC_BT_OUT_CNFRMD_TRANSACTION.sql  C01J08 - AGREEMENT_STATIC_DAILY.sql  C01J09 - BT, PROMO, AND SPECIAL PLAN.sql  C01J10 - MAC CODE CHECK.sql  C01J11 - REFERENCE DATA CHECK.sql  C01J13 - CC_AGREEMENT_CHANNEL.sql  C01J14 - CC_AGREEMENT_ME_SNAPSHOT.sql  C01J17 - DATA DELETION Data Retention.sql  C01J20 - ACCRUED INT BREAKDOWN.sql  C01J21 - DISASTER RECOVERY ADDITIONS.sql  END JOB.sql  FR01 - ACCRUED INTEREST.sql  FR02 - DEFERRED INTEREST.sql  FR03 - WD2.sql  FR04 - BALANCE BY RATE.sql  FR09 - BALANCE TRANSACTION.sql  FR10 - LATE FEES AND INTEREST BY BILLING CYCLE.sql  FR11 - REPAYMENTS BANDING & PAYMENTS ACCRUAL.sql  FR14 - CC_COBRA.FR14_TRANSACTIONS Part 1.sql  FR14 - CC_COBRA.FR14_TRANSACTIONS Part 2.sql  FR15 - BALANCE WALK.sql  FR15A - BALANCE WALK - AGGREGATIONS.sql  FR16 - BT FORECASTING.sql  FR19 - AVIOS MONTHLY EXTRACT.sql  FR20 - INTERCHANGE FEE ANALYSIS.sql  FR22 - BW SUPPLEMENTS.sql  FR25 - NEW ACCOUNTS.sql  FR31 - CREDIT_LIMIT AND ME BALANCE.sql  FR35 - MONTH END BALANCES AND TXNS.sql  FR36 - SCHEME BY TRANSACTIONS AND TXN TYPE.sql
(+44 files in other folders)
